# ece5532-ws-2021

./: .gitignore  README.md
src/basic_example/: CMakeLists.txt  package.xml
src/basic_example/launch/: roslaunch_example.launch
src/basic_example/src/: namespace_example.cpp  service_advertiser.cpp  service_client.cpp  topic_publisher.cpp
src/basic_example/srv/: Adder.srv
src/basic_examples/: CMakeLists.txt  package.xml
src/basic_examples/cfg/: ReconfigExample.cfg
src/basic_examples/launch/: static_param.launch  yaml_param_example.launch
src/basic_examples/src/: dynamic_param_example.cpp  message_stamped.cpp  service_advertiser.cpp  service_client.cpp  static_param_example.cpp  time_example.cpp  timer_example.cpp  topic_publisher.cpp
src/basic_examples/yaml/: param_example.yaml
src/cpp_example/: CMakeLists.txt  Factorial.cpp  Factorial.h  factorial_example.cpp  main.cpp
src/dead_reckoning/: CMakeLists.txt  package.xml
src/dead_reckoning/launch/: dead_reckoning.launch
src/dead_reckoning/src/: DeadReckoning.cpp  DeadReckoning.h  dead_reckoning_node.cpp
src/diff_drive/: CMakeLists.txt  package.xml
src/diff_drive/src/: diff_drive_kinematics.cpp
src/gps_example/: CMakeLists.txt  package.xml
src/gps_example/launch/: gps_example.launch
src/gps_example/src/: gps_example.cpp
src/hector_example/: CMakeLists.txt  map.yaml  package.xml
src/hector_example/launch/: hector_example.launch
src/hector_example/yaml/: amcl_params_gazebo.yaml  hector_params_gazebo.yaml
src/imu_demo/: CMakeLists.txt  package.xml
src/imu_demo/launch/: imu_demo_razor.launch  imu_demo_razor_bag.launch  imu_demo_zed.launch  temp.launch
src/imu_demo/rviz/: imu_demo.rviz  imu_demo_razor.rviz
src/imu_demo/scripts/: imu_to_tf.py  imu_to_tf_razor.py  razor_imu_driver.py
src/imu_demo/udev/: 99-SparkfunImu.rules
src/mantis_model/: CMakeLists.txt  package.xml
src/mantis_model/launch/: mantis_gazebo.launch  mantis_model.launch
src/mantis_model/meshes/: mantis_base.stl  mantis_frame.stl
src/mantis_model/src/: MantisJointPub.cpp  MantisJointPub.h  main_mantis_joint_pub.cpp
src/mantis_model/urdf/: mantis.urdf.xacro  mantis_control.urdf.xacro  mantis_gazebo.urdf.xacro  mantis_sensors.urdf.xacro  mantis_visual.urdf.xacro
src/mantis_model/yaml/: roscontrol_params.yaml
src/marker_example/: CMakeLists.txt  package.xml
src/marker_example/launch/: marker_example.launch
src/marker_example/rviz/: marker_example.rviz
src/marker_example/src/: marker_example.cpp
src/maze_world_navigation/: CMakeLists.txt  package.xml
src/maze_world_navigation/launch/: maze_world_navigation.launch
src/maze_world_navigation/yaml/: global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
src/opencv_example/: CMakeLists.txt  package.xml
src/opencv_example/cfg/: HsvExample.cfg  RgbHough.cfg
src/opencv_example/launch/: rgb_hough_example.launch
src/opencv_example/src/: RgbHough.cpp  RgbHough.h  rgb_hough_node.cpp
src/quat_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/quat_demo/cfg/: QuatDemo.cfg
src/quat_demo/launch/: quat_demo.launch
src/quat_demo/rviz/: rviz_config.rviz
src/quat_demo/src/: quat_demo.cpp
src/template_files/: DynamicReconfigureTemplate.cfg  NodeTemplate.cpp  NodeTemplate.h  main_node_template.cpp  rename_to_CMakeLists.txt  rename_to_package.xml
src/tf_example/: CMakeLists.txt  package.xml
src/tf_example/cfg/: TFExample.cfg
src/tf_example/src/: tf_example.cpp
src/transform_example/: CMakeLists.txt  package.xml
src/transform_example/src/: tf_example1.cpp  tf_example2.cpp  tf_example_pubsub.cpp  transform_example1.cpp  transform_example2.cpp
src/urdf_example/: CMakeLists.txt  package.xml
src/urdf_example/launch/: urdf_example.launch
src/urdf_example/src/: JointStateMsgPub.cpp  JointStateMsgPub.h  main_node_jointstate_pub.cpp
src/urdf_example/urdf/: urdf_example.urdf
