<?xml version="1.0"?>
<package format="2">
<name>basic_examples</name>
<version>0.0.0</version>
<description>This is an example basic package</description>
<maintainer email="abc@xyz.com">ABC</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>dynamic_reconfigure</depend>
</package>

