<?xml version="1.0"?>
<package format="2">
  <name>imu_demo</name>
  <version>0.0.0</version>
  <description>Using IMU to project pointcloud from RealSense camera into global frame</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>

</package>
