<?xml version="1.0"?>
<package format="2">
  <name>marker_example</name>
  <version>0.0.0</version>
  <description>
    Description of package
  </description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
