<?xml version="1.0"?>
<package format="2">
  <name>maze_world_navigation</name>
  <version>0.0.0</version>
  <description>
    Description of package
  </description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
