<?xml version="1.0"?>
<package format="2">
  <name>opencv_example</name>
  <version>2.0.2</version>
  <description>The opencv_example package</description>
  <maintainer email="test@gmail.com">test</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
