<?xml version="1.0"?>
<package format="2">
<name>urdf_example</name>
<version>0.0.0</version>
<description>The odom_pub package</description>
<maintainer email="micho@todo.todo">micho</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
</package>
